correction alignement mobile

--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ a:hover{
 
     #grid{
         display: grid;
-        grid-template-columns: 65px 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 70px 120px 35px 240px 250px 250px 150px;
     }
 
@@ -220,7 +220,8 @@ a:hover{
         grid-row: 2;
         width: 75px;
         height: 75px;
-        margin-left: 40px;
+        position: relative;
+        left: 50px;
     }
     
     /* PREMIERE COLONNE GRID*/
@@ -318,6 +319,7 @@ a:hover{
         grid-column: 1/5;
         grid-row: 1/4;
         border-bottom: solid 1px black;
+        border-right: none;
     }
     
     #colTwo{
